--- a/inst/doc/Tutorial.Rmd
+++ b/inst/doc/Tutorial.Rmd
@@ -8,29 +8,35 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-
-This package is wrapping [Bit.ly](https://www.bit.ly) API. In order to begin downloading usefull statistics about your Bit.ly links, there is one requirement, which is to gain your API Key (no OAuth support at this time) - so-called "Generic Access Token". 
-
+  
+  This package is wrapping [Bit.ly](https://www.bit.ly) API, [Goo.gl](https://goo.gl) and [Ow.ly](http://ow.ly) support. In order to begin downloading usefull statistics and shortening URLs, there is one requirement, which is to gain your API Key (no OAuth support at this stage, see later with a new package called 'urlshorteneR') - so-called "Generic Access Token". 
+  
 ## Authentication
-
-For that there are **two ways**. 
-
-1. The first one is to go to <https://bitly.com/a/oauth_apps> and generate one yourself. Then you will need to execute `rbitlyApi("Your Generic Access Token")` method. This is a **requirenment** to work with all functions in this package. 
-
-2. **Or** you can retrieve your "Generic Access Token" using your username and password to the account which automatically sets your API Key. Meaning you can execute `rbitlyApi_up("YourUsername", "YourPassword")` which not only will print your API Key (just in the case you will need it) but also, using the method above, "store" it R. 
-
-Either one is OK. Choose the one which is more convenient to you. 
-
-
+  
+  For that there are **two ways**. 
+  
+  1. The first one is to go to <https://bitly.com/a/oauth_apps> and generate one yourself. Then, you will need to execute `rbitlyApi("Your Generic Access Token")` method. This is a **requirenment** to work with all `bit.ly` functions in this package. 
+  
+  2. **Or** you can retrieve your "Generic Access Token" using your username and password to the account which automatically sets your API Key. Meaning you can execute `rbitlyApi_up("YourUsername", "YourPassword")`, which not only will print your API Key (just in the case you will need it) but also, using the method above, "store" it R. 
+  
+  For `bit.ly` either one is OK, for Ow.ly you will need to have your API key already and for `goo.gl`, follow `?rbitlyApi` ("auth_googl" method).
+  
+# Bit.ly
+  
 ## An Example for User Metrics
-
+  
 Official API documentation <http://dev.bitly.com/user_metrics.html>.
-
+  
 Method below returns my most-clicked Bit.ly links (ordered by number of clicks) in a given time period.
-
+  
 ```{r}
 library(RBitly)
-rbitlyApi("0906523ec6a8c78b33f9310e84e7a5c81e500909")
+
+## Old
+## rbitlyApi("0906523ec6a8c78b33f9310e84e7a5c81e500909") # Now officially deprecated
+
+## Now
+options(Bit.ly = "0906523ec6a8c78b33f9310e84e7a5c81e500909", Ow.ly = "F1QH-Q64B-BSBI-JASJ", Goo.gl = "AIzaSyAbJt9APfph1JGIhflkoH9UuGhOACntOjw")
 
 user_Metrics_PopularLinks(unit = "month", units = -1, limit = 100)
 ```
@@ -43,7 +49,6 @@ Official API documentation <http://dev.bitly.com/link_metrics.html>.
 This returns users who have encoded `http://bit.ly/DPetrov` link sorted by the number of clicks on each encoding user's link.
 
 ```{r}
-rbitlyApi("0906523ec6a8c78b33f9310e84e7a5c81e500909")
 link_Metrics_EncodersByCount(link = "http://bit.ly/DPetrov", my_network = "false", limit = 100)
 ```
 
@@ -55,7 +60,6 @@ Official API documentation <http://dev.bitly.com/user_info.html>.
 The first method returns an information about myself, whereas the second one returns a list of tracking domains I have configured (I have none).
 
 ```{r}
-rbitlyApi("0906523ec6a8c78b33f9310e84e7a5c81e500909")
 user_Info()
 
 user_TrackingDomains()
@@ -69,8 +73,26 @@ Official API documentation <http://dev.bitly.com/domains.html>.
 This will query whether a given domain is a valid Bit.ly PRO domain (nyti.ms is). 
 
 ```{r}
-rbitlyApi("0906523ec6a8c78b33f9310e84e7a5c81e500909")
 bitly_pro_domain(domain = "nyti.ms")
+```
+
+# Ow.ly
+
+## An example for shortening link with Ow.ly
+
+```{r}
+# check later & helm me with your Ow.ly API key. Please do contribute back. 
+# links_ShortenOwly("")
+# link_Metrics_Owly("")
+```
+
+# Goo.gl
+
+```{r}
+g2 <- links_ShortenGoogl(longUrl = "https://developers.google.com/url-shortener/v1/url/insert")
+g2
+g1 <- links_ExpandGoogl(shortUrl = "http://goo.gl/vM0w4", showRequestURL = F)
+g1
 ```
 
 -------------
@@ -135,7 +157,7 @@ Based on <http://dev.bitly.com/>
 
 - <http://dev.bitly.com/nsq.html>  
     + None endpoints are implemented here, logically, because all are "premium". Addionally, this is only for the [NSQ](http://nsq.io/) platform.
-    
+
 - <http://dev.bitly.com/organization_metrics.html>
     + None endpoints are implemented here, because all are premium. Contact me if you need it. 
 
